--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 </head>
 <body>
     <header>
-        <h1>Morning Briefing Quiz - May 6, 2025</h1>
+        <h1>Global Quiz - May 6, 2025</h1>
         <p>Test your knowledge of the key economic insights from today's briefing</p>
     </header>
     
