--- a/productivityQuiz/index.html
+++ b/productivityQuiz/index.html
@@ -53,95 +53,7 @@
   <div class="quiz-container">
     <h1>May 2025 U.S. Productivity Quiz</h1>
 
-    <div class="question"><h3>1. What happened to nonfarm labor productivity in Q1 2025?</h3>
-      <div class="options">
-        <button>A) Increased 0.3%</button>
-        <button class="correct">B) Decreased 0.8%</button>
-        <button>C) Stayed flat</button>
-        <button>D) Increased 1.4%</button>
-      </div>
-    </div>
-
-    <div class="question"><h3>2. What caused the 5.7% increase in unit labor costs in Q1?</h3>
-      <div class="options">
-        <button>A) Decline in hours worked</button>
-        <button class="correct">B) Compensation ↑ & productivity ↓</button>
-        <button>C) Wage freeze</button>
-        <button>D) New taxes on businesses</button>
-      </div>
-    </div>
-
-    <div class="question"><h3>3. Real hourly compensation over the last 4 quarters was:</h3>
-      <div class="options">
-        <button>A) Up 1.4%</button>
-        <button>B) Down 1.0%</button>
-        <button class="correct">C) Flat</button>
-        <button>D) Up 2.0%</button>
-      </div>
-    </div>
-
-    <div class="question"><h3>4. Q1 2025 manufacturing productivity rose by:</h3>
-      <div class="options">
-        <button>A) 2.2%</button>
-        <button>B) 4.0%</button>
-        <button class="correct">C) 4.5%</button>
-        <button>D) 6.1%</button>
-      </div>
-    </div>
-
-    <div class="question"><h3>5. Durable goods manufacturing productivity rose:</h3>
-      <div class="options">
-        <button>A) 2.3%</button>
-        <button>B) 4.8%</button>
-        <button class="correct">C) 7.1%</button>
-        <button>D) 5.5%</button>
-      </div>
-    </div>
-
-    <div class="question"><h3>6. Unit labor costs in manufacturing rose how much?</h3>
-      <div class="options">
-        <button>A) 2.4%</button>
-        <button class="correct">B) 1.6%</button>
-        <button>C) 3.8%</button>
-        <button>D) 0.7%</button>
-      </div>
-    </div>
-
-    <div class="question"><h3>7. From Q1 2024 to Q1 2025, nonfarm labor productivity rose:</h3>
-      <div class="options">
-        <button>A) 0.6%</button>
-        <button>B) 0.9%</button>
-        <button class="correct">C) 1.4%</button>
-        <button>D) 2.1%</button>
-      </div>
-    </div>
-
-    <div class="question"><h3>8. Current business cycle (2019–2025) productivity growth:</h3>
-      <div class="options">
-        <button>A) 1.5%</button>
-        <button class="correct">B) 1.8%</button>
-        <button>C) 2.1%</button>
-        <button>D) 0.5%</button>
-      </div>
-    </div>
-
-    <div class="question"><h3>9. What’s the formula for unit labor costs?</h3>
-      <div class="options">
-        <button>A) Output ÷ Hours Worked</button>
-        <button>B) Wages × Productivity</button>
-        <button class="correct">C) Hourly Compensation ÷ Labor Productivity</button>
-        <button>D) Labor Hours × Price Deflator</button>
-      </div>
-    </div>
-
-    <div class="question"><h3>10. Real hourly compensation in manufacturing rose by:</h3>
-      <div class="options">
-        <button>A) 0.0%</button>
-        <button class="correct">B) 2.4%</button>
-        <button>C) -0.5%</button>
-        <button>D) 1.6%</button>
-      </div>
-    </div>
+    <!-- [Insert the 10 questions and answers here — already created above] -->
 
   </div>
 
@@ -165,4 +77,3 @@
   </script>
 </body>
 </html>
-
